--------------------------------------------------------------------------------
drkns 2025-11-03 21:13:53+00:00 - build 6583

1. Fix debug build.

2. Fix substitution in far:regex.

--------------------------------------------------------------------------------
w17 2025-11-03 23:54:45+03:00 - build 6582

1. Recover $$ -> $ rule in regex substutution

--------------------------------------------------------------------------------
w17 2025-11-03 20:52:30+03:00 - build 6581

1. Allow \{group_number} backreference in regex pattern.

2. Allow ${group_number} in regex replace (if named group was not found).

--------------------------------------------------------------------------------
drkns 2025-11-02 22:05:07+00:00 - build 6580

1. Correction of 6421.3.

--------------------------------------------------------------------------------
drkns 2025-11-01 19:50:42+00:00 - build 6579

1. gh-1036: Suppress elevation requests when scanning %path% for executables.

--------------------------------------------------------------------------------
shmuel 2025-10-25 17:09:40+03:00 - build 6578

1. Add more stack operations to Macro-API engine.

--------------------------------------------------------------------------------
ssvine 2025-10-25 10:12:06+03:00 - build 6577

1. gh-1034: Refresh plugin panel after uploading a changed file in ProcessEnter.

--------------------------------------------------------------------------------
shmuel 2025-10-24 20:22:16+03:00 - build 6576

1. Add a few stack operations to Macro-API engine.

--------------------------------------------------------------------------------
drkns 2025-10-20 23:56:08+01:00 - build 6575

1. Clarify DI_COMBOBOX and DIF_DROPDOWNLIST behavior in corner cases.

2. Refactoring.

3. Warnings.

--------------------------------------------------------------------------------
rohitab 2025-10-20 08:50:41+11:00 - build 6574

1. gh-1032: Crash if size of name column is less than size of mark character.
