@@ -2190,6 +2190,7 @@ enum FAR_REGEXP_CONTROL_COMMANDS
 	RECTL_BRACKETSCOUNT             = 6,
 	RECTL_NAMEDGROUPINDEX           = 7,
 	RECTL_GETNAMEDGROUPS            = 8,
+	RECTL_GETSTATUS                 = 9,
 };
 
 struct RegExpMatch
@@ -2211,6 +2212,13 @@ struct RegExpNamedGroup
 {
 	size_t Index;
 	const wchar_t* Name;
+};
+
+struct RegExpStatus
+{
+	const wchar_t* Error; // Error description
+	intptr_t    Position; // position in regex pattern
+	int           Status; // 0 - ok
 };
 
 enum FAR_SETTINGS_CONTROL_COMMANDS
