@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+w17 2025-11-04 18:20:17+03:00 - build 6584
+
+1. RegExpControl: + RECTL_GETSTATUS
+
+--------------------------------------------------------------------------------
 drkns 2025-11-03 21:13:53+00:00 - build 6583
 
 1. Fix debug build.
